<resources>
    <string name="app_name">SungChan</string>
    <string name="app_name_kr">성찬.</string>
    <string name="choice">무엇을\n찾고 있나요?</string>
    <string name="splash">누구나 요리사가\n될 수 있는\n세상을 엽니다.</string>
    <string name="customer">나만의\n요리사를 고용하고 싶어요</string>
    <string name="chef">나의 요리실력을\n고용해 줄 사람을 찾고 있어요</string>
    <string name="tellme_customer">당신의\n취향을\n알려주세요</string>
    <string name="tellme_chef">당신의\n요리를\n알려주세요</string>
    <string name="continue_btn">계 속 하 기  \t></string>
    <string name="end_btn">끝 내 기  \t></string>

    <string name="pass_btn">건 너 뛰 기</string>


    <string name="whichfood_customer">어떤\n요리를\n먹고싶나요?</string>
    <string name="whichfood_cherf">무슨 요리에\n자신이 있나요?</string>
    <string name="whichtaste_customer">평소에\n어떻게\n드시나요?</string>
    <string name="whichtaste_chef">평소에\n어떻게\n요리하시나요?</string>
    <string name="choice_all">*4영역 모두 선택해 주세요</string>
    <string name="choice_maximum">*최대 3개까지 선택 가능</string>
    <string name ="hire_request">김수연 님께서 고용요청을 하셨습니다.</string>
    <string name="dummy_info">저는 3년째 성찬에서 보양식을 전문으로해온 성순자라고합니다. 고객님들이 맛있게 먹어주는 것이 저에게는 큰 행복입니다. 전복찜, 갈비찜 일단 전화주십시오</string>
    <string name="dummy_food">갈비찜, 갈비탕, 삼계탕, 초계탕, 전복찜, 그 외 모든 보양식 가능</string>

    <string name="korean">한식</string>
    <string name="italian">양식</string>
    <string name="bunsik">분식</string>
    <string name="snack">간식</string>
    <string name="healthy">건강식</string>
    <string name="baby">이유식</string>
    <string name="chinese">중식</string>
    <string name="japanese">일식</string>
    <string name="bansang">7첩반상</string>


    <string name="completed_costomer">성공적으로\n요청을\n전달했습니다.</string>
    <string name="completed_info_costomer">고용이 확정되면\n알림으로 알려드리겠습니다.</string>
    <string name="completed_chef">성공적으로\n정보를\n등록했습니다.</string>
    <string name="completed_info_chef">고용 요청이 있으면\n알림으로 알려드리겠습니다.</string>

    <string name="my_message">새로운\n메시지</string>
    <string name="my_hire">고용\n현황</string>
    <string name="chef_message_dummy">&quot;친구들이랑 간단히 브런치 하려구요~&quot;</string>
    <string name="address_dummy">주소 : 서울 역삼동 624&#8211;17 201호</string>
    <string name="introduce_your_kitchen">당신의\n주방을\n소개해 주세요</string>
    <string name="registlation_in_process_chef">고객님의 정보를\n등록 중입니다.</string>
    <string name="registlation_in_process_customer">고객님의\n취향 분석 중..</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
